tests/type_errors/type_arity_mismatch.sy
mod A

enum A a = A { field: a }

def q : forall a. A -> Str : A:A { field } = field

def main : Str := q ' A:A { field: 1 }

--+ expected exit status: 7
--+ expected stderr:
--+ > The number of type arguments doesn't match here.
--+ 
--+ '@ A' <#44 _>
--+ ----
--+ _ 
--+ 
--+ tests/type_errors/type_arity_mismatch.sy
--+   5| def q : forall a. A -> Str : A:A { field } = field
--+                        ^

